--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,14 @@ jupyterlab = "^4.3.2"
 ipywidgets = "^8.1.5"
 requests = "^2.28.0"
 
+[tool.poetry.group.dev.dependencies]
+black = {extras = ["jupyter"], version = "^24.10.0"}
+flake8 = "^7.1.1"
+ruff = "^0.8.3"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.4"
+
 
 [build-system]
 requires = ["poetry-core"]
