--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Demonstrate calling various RA APIs."
 authors = ["Darren Vengroff <darren@rewiringamerica.org>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -19,6 +20,7 @@ ruff = "^0.8.3"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.4"
+nbmake = "^1.5.4"
 
 [build-system]
 requires = ["poetry-core"]
