--- a/rem-with-nextjs/package.json
+++ b/rem-with-nextjs/package.json
@@ -12,7 +12,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "next": "15.1.2",
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "@google-cloud/secret-manager": "^5.6.0"
   },
   "devDependencies": {
     "typescript": "^5",
