--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "api-demo"
-version = "0.1.0"
+version = "0.1.1"
 description = "Demonstrate calling various RA APIs."
 authors = ["Darren Vengroff <darren@rewiringamerica.org>"]
 readme = "README.md"
@@ -12,6 +12,7 @@ censusdis = "^1.2.4"
 jupyterlab = "^4.3.2"
 ipywidgets = "^8.1.5"
 requests = "^2.28.0"
+rewiringamerica-rem = "^1.0.6"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^24.10.0"}
